--- a/OneDrive/Desktop/CSI_2300_PROJECT/NeatFile/NeatFile/.vscode/launch.json
+++ b/OneDrive/Desktop/CSI_2300_PROJECT/NeatFile/NeatFile/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Launch App",
             "request": "launch",
             "mainClass": "organizer.NeatFileApp",
-            "vmArgs": "--module-path C:/Users/aniar/OneDrive/Desktop/JavaFX/javafx-sdk-24/lib --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path PATH_TO_LIBRARIES_HERE --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
